v1.1.4-fix: -Solucionado fallo en proyectos al redimensionar. -Corregido un error que provocaba que se saliera el texto de los proyectos cuando la ventana media menos de 768px de ancho. - Cambiada ubicacion estilos scrollbar en CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,28 @@ hr {
   opacity: 50%;
 }
 
+/* Scrollbar width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Scrollbar  Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  /* margin: 20px auto; */
+}
+
+/* Scrollbar Handle */
+::-webkit-scrollbar-thumb {
+  background: #3a4263;
+  /* border-radius: 10px; */
+}
+
+/* Scrollbar Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #3f4974;
+}
+
 /* ? ==================== NAVBAR ==================== */
 .navbar {
   display: flex;
@@ -52,17 +74,16 @@ hr {
   align-items: center;
   justify-content: space-around;
   /* height: 130px; */
-  transition: ease-in-out 0.4s;
+  transition: ease-in-out 0.2s;
 
   position: fixed;
   width: 100%;
   z-index: 99;
 
-  /* background-color: lightcoral; */
-
   /* effects */
-  box-shadow: 5px 5px 15px #00000040;
+  box-shadow: 0 10px 15px #00000040;
   backdrop-filter: blur(3px);
+  background-color: #131b28aa;
 
   margin-bottom: 80px;
 }
@@ -84,7 +105,7 @@ hr {
 }
 
 .logo img {
-  width: 100px;
+  width: 80px;
   margin: 10px;
 }
 
@@ -153,28 +174,6 @@ label {
   border-radius: 40px;
 
   box-shadow: 0 0 2px black;
-}
-
-/* Scrollbar width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Scrollbar  Track */
-::-webkit-scrollbar-track {
-  background: transparent;
-  margin: 20px auto;
-}
-
-/* Scrollbar Handle */
-::-webkit-scrollbar-thumb {
-  background: #3a4263;
-  border-radius: 10px;
-}
-
-/* Scrollbar Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #3f4974;
 }
 
 /* ? ==================== CONTENT ==================== */
@@ -932,7 +931,7 @@ footer {
     transform: scaleY(0);
     transform-origin: top;
     overflow: hidden;
-    transition: ease-in-out 0.4s;
+    transition: ease-in-out 0.2s;
     width: 100%;
   }
 
@@ -1023,6 +1022,15 @@ footer {
   .project:nth-child(even) .project-desc {
     grid-area: 1 / -1 / 1 / -13;
     text-align: left;
+  }  
+
+  .project a {
+    height: 100%;
+  }
+
+  .project img {
+    height: 100%;
+    overflow: hidden;
   }
 
   /* Project image link */
@@ -1115,15 +1123,6 @@ footer {
   .project {
     width: 90%;
     margin: 50px auto;
-  }
-
-  .project a {
-    height: 100%;
-  }
-
-  .project img {
-    height: 100%;
-    overflow: hidden;
   }
 
   /* ? ==================== SKILLS ==================== */
